--- a/css/index.css
+++ b/css/index.css
@@ -1,7 +1,11 @@
 body {
     font-size: 16px;
-    font-family: Verdana, Geneva, Tahoma, sans-serif;
+    font-family: 'Inter', sans-serif;
     color: rgb(0, 0, 0);
+}
+
+h1,h2,h3{
+    font-family: 'Ramabhadra', sans-serif;
 }
 
 header,
