--- a/lesson3/css/small.css
+++ b/lesson3/css/small.css
@@ -73,6 +73,10 @@ nav ul li a:hover{
     border-radius: 5px 5px 5px 5px;
 }
 
+.active{
+    color: rgb(219, 184, 26);
+}
+
 /*-----------------------------------------
 Main
 -----------------------------------------*/
