fix padding views article

--- a/lesson11/css/medium.css
+++ b/lesson11/css/medium.css
@@ -18,6 +18,10 @@ Medium Views
         display: block;
     }
 
+    article {
+        padding: 2rem;
+    }
+
     /* ----------------------------------------
     Gallery
     ---------------------------------------- */
