--- a/lesson11/css/large.css
+++ b/lesson11/css/large.css
@@ -8,6 +8,10 @@
     font-size: 1.1rem;
   }
 
+  article {
+    padding: 3rem;
+}
+
   /*-----------------------------------------
     Navegation Menu
     -----------------------------------------*/
