fix margin views articles

--- a/lesson11/css/medium.css
+++ b/lesson11/css/medium.css
@@ -20,6 +20,7 @@ Medium Views
 
     article {
         padding: 2rem;
+        margin: 30px;
     }
 
     /* ----------------------------------------
