--- a/css/index.css
+++ b/css/index.css
@@ -1,17 +1,16 @@
 body {
-    font-size: 16px;
-    font-family: 'Inter', sans-serif;
+    font-size: 17px;
     color: rgb(0, 0, 0);
-    background-color: rgb(242, 238, 229)
+    background-color: rgb(255, 255, 255);
+    margin: 10px ;
 }
 
 h1,h2,h3{
-    font-family: 'Ramabhadra', sans-serif;
+    font-family: Times, "Times New Roman", Georgia, serif;
 }
 
 header,
 footer {
-    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
     border-radius: 3px 3px 3px 3px;
     padding: 1rem;
 }
@@ -19,7 +18,6 @@ footer {
 header img {
     width: 170px;
     height: auto;
-    border-radius: 3px 3px 3px 3px;
     float: right;
 }
 
@@ -43,5 +41,17 @@ h2{
 }
 
 p {
-    margin: 1px;
+    margin-top: 1rem;
+}
+
+main{
+    margin-top: 5rem;
+}
+
+.subtitle{
+    font-size: 1.5rem;
+}
+
+li{
+    margin-top: 1rem;
 }
