--- a/css/index.css
+++ b/css/index.css
@@ -1,8 +1,8 @@
 body {
-    font-size: 17px;
+    font-size: 1.2rem;
     color: rgb(0, 0, 0);
     background-color: rgb(255, 255, 255);
-    margin: 10px ;
+    margin: 1.5rem ;
 }
 
 h1,h2,h3{
@@ -18,7 +18,8 @@ footer {
 header img {
     width: 170px;
     height: auto;
-    float: right;
+    float: center;
+    border-radius: 5px;
 }
 
 header,
@@ -71,4 +72,10 @@ li{
 
 article{
     margin-bottom: 4rem;
+}
+
+@media only screen and (max-width: 800px) {
+    .wrapper{
+        grid-template-columns: auto;
+    }
 }
