--- a/css/index.css
+++ b/css/index.css
@@ -2,17 +2,11 @@ body {
     font-size: 1.2rem;
     color: rgb(0, 0, 0);
     background-color: rgb(255, 255, 255);
-    margin: 1.5rem ;
+    letter-spacing: .05rem;
 }
 
 h1,h2,h3{
     font-family: Times, "Times New Roman", Georgia, serif;
-}
-
-header,
-footer {
-    border-radius: 3px 3px 3px 3px;
-    padding: 1rem;
 }
 
 header img {
@@ -23,10 +17,10 @@ header img {
 }
 
 header,
-main,
-footer {
+main {
     margin: 50px auto;
     max-width: 800px;
+    padding: 1rem;
 }
 
 footer a {
@@ -35,6 +29,7 @@ footer a {
 
 footer{
     text-align: center;
+    padding: 1rem;
 }
 
 h2, h3{
@@ -53,21 +48,20 @@ main{
     font-size: 1.5rem;
 }
 
-li{
-    margin-top: 1rem;
-}
+
 
 .wrapper {
     display: grid;
     grid-template-columns: auto auto;
     gap: 10px;
-    padding: 10px;
+    padding: 5px;
     }
 
 .item {
       text-align: center;
-      padding: 20px 0;
+      padding: 5px 0;
       font-size: 30px;
+      margin: auto;
 }
 
 article{
@@ -78,7 +72,7 @@ article{
     .wrapper{
         grid-template-columns: auto;
     }
-    article div.cards  {
+    article div.cardsp  {
         display: grid;
 
         grid-template-columns: auto;    
@@ -88,19 +82,126 @@ article{
 
 /* CARDS */
 
-div.cards section {
+div.cardsp section {
     text-align: center;
     border: .1rem solid #afafaf;
     border-radius: .5rem;
     padding: .7rem;
 }
 
-div.cards  {
+div.cardsp  {
     display: grid;
     grid-template-columns: auto auto auto;
     gap: 2rem;
 }
 
-div.cards section p {
+div.cardsp section p {
     padding: .75rem;
 }
+
+/* CARDS */
+
+
+
+div.cardspr section,
+div.cardsfa section
+ {
+    text-align: center;
+    border: .1rem solid #afafaf;
+    background-color: rgb(229, 229, 229);
+    border-radius: .5rem;
+    padding: .7rem;
+    height: 80px;
+    width: 10rem;
+}
+
+div.cardspr,
+div.cardsfa  {
+    display: grid;
+    grid-template-columns: auto auto auto;
+    gap: 1rem;
+    
+}
+
+div.cardspr{
+    margin-bottom: 1.2rem;
+}
+
+
+div.cardspr section p,
+div.cardsfa section p  {
+    padding: .75rem;
+    font-family: monospace;
+    font-size: .9rem;
+}
+div.cardspr section img,
+div.cardsfa section img {
+    height: 50px;
+    width: auto;
+}
+
+nav {
+    background-color: black;
+    margin: 0 auto;
+    margin-bottom: 0;
+}
+.navigation {
+    list-style: none;
+    padding: 0;
+    display: flex;
+
+}
+ul.navigation {
+    margin: 0;
+    padding: 0;
+    text-transform: uppercase;
+    font-family: Monospace;
+}
+.navigation li:first-child {
+    display: block;
+}
+.navigation li {
+    display: block;
+    flex: 1 1 auto;
+}
+.navigation a {
+    display: block;
+    text-decoration: none;
+    color: #FAFAFA;
+    padding: 1rem;
+    font-size: .95rem;
+    text-align: center;
+}
+.navigation a:hover {
+    background-color:rgb(255, 255, 255);
+    color: #000000;
+    font-weight: bolder;
+}
+a.active {
+    color: rgb(58, 161, 84);
+    font-weight: bolder;
+}
+.responsive li {
+    display: block;
+}
+
+
+#scrollBtn {
+    display: none;
+    position: fixed;
+    bottom: 20px;
+    right: 30px;
+    z-index: 99;
+    font-size: 1.2rem;
+    outline: none;
+    background-color: rgb(0, 0, 0);
+    color: white;
+    cursor: pointer;
+    padding: .7rem;
+    border-radius: 4px;
+  }
+  
+  #scrollBtn:hover {
+    background-color: #ffffff;
+    color: #000;
+  }
