--- a/css/index.css
+++ b/css/index.css
@@ -35,6 +35,14 @@ h2{
     border-bottom: 1px solid rgb(138, 138, 138);
 }
 
+.button {
+    background-color: #1277fc;
+    padding: 10px 20px;
+    text-decoration: none;
+    color: #FAFAFA;
+    border-radius: 8px;
+    font-size: 1rem;
+}
 /* ----------------------------------------------------------------
 HEADER
 -----------------------------------------------------------------*/
@@ -160,7 +168,7 @@ div.cards-familiar section
     background-color: rgb(243, 243, 243);
     border-radius: .5rem;
     padding: .4rem;
-    height: 55px;
+    height: 75px;
     width: 6rem;
     margin: auto;
 }
@@ -199,7 +207,7 @@ div.cards-familiar section img {
 /* social links */
 div.social-links section{
     display: grid;
-    grid-template-columns: auto auto auto;
+    grid-template-columns: auto auto auto auto;
     gap: 1rem;
 }
 
@@ -292,7 +300,7 @@ MEDIUM & LARGE SIZE
     div.cards-familiar section
     {
         padding: .8rem;
-        height: 100px;
+        height: 130px;
         width: 12rem;
     }
 
