--- a/css/index.css
+++ b/css/index.css
@@ -207,7 +207,7 @@ div.cards-familiar section img {
 /* social links */
 div.social-links section{
     display: grid;
-    grid-template-columns: auto auto auto auto;
+    grid-template-columns: auto auto auto;
     gap: 1rem;
 }
 
@@ -322,6 +322,11 @@ MEDIUM & LARGE SIZE
     /* projects section */
     div.cards-project section p {
         padding: 0 10rem 1rem 10rem;
+    }
+
+    /* social links */
+    div.social-links section{
+    grid-template-columns: auto auto auto auto;
     }
 
 }
